# goit-ds-hw-03

hw1/: main.py  pyproject.toml
hw2/: main.py  pyproject.toml
